--- a/index.html
+++ b/index.html
@@ -1,7 +1,140 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
+<style>
+body {
+  font-family: Calibri;
+  font-size: 11pt;
+  color: black;
+  background-color: #F4F7FF
+}
+Large {
+  font-family: Calibri;
+  font-size: 15pt;
+  color: black;
+}
+small { 
+    font-size: smaller;
+}
+h2   {color: blue;}
+h3   {color: blue;}
+</style>
+</head>
+<body lang=EN-US>
+
+<table border=0, width=100%>
+ <tr>
+    <td width=130><img width=118 height=134 src="AD.jpg">
+  </td>
+  <td>
+    <large>
+        <b>Alan Dickman</b><br>
+        Solution Architect<br>
+        IBM Watson &amp; Cloud Platform Group    
+    </large>
+   </td>
+ </tr>
+</table>
+
+<h3>BIO</h3>
+
+Alan Dickman is a Solution Architect,
+Executive Consultant and Technical Sales Specialist on theWatson &amp;
+Cloud Platform team of IBM North America. He supports the specification and sale of
+business solutions based on IBM blockchain to state
+&amp; local governments, healthcare and life sciences organizations across the
+United States. <p>
+In 2010, Mr. Dickman received a Global Technical Award for his
+contributions to IBM's Advanced Metering Infrastructure business solution
+offering.</p>
+
+<h3>Articles Available Online</h3>
+<ul>
+<li><a
+href="https://www.linkedin.com/pulse/roadmap-learning-hyperledger-composer-ibm-blockchain-platform-alan/">
+Roadmap for learning Hyperledger Composer and the IBM Blockchain Platform</a>, LinkedIn, August 13<sup>th</sup>, 2018.</li>
+<li><a
+href="https://www.linkedin.com/pulse/blockchain-meets-devops-hyperledger-project-cello-alan-dickman/">
+Blockchain meets DevOps in Hyperledger Project Cello</a>, LinkedIn, February 16<sup>th</sup>, 2018.</li>
+<li><a
+href="https://www.linkedin.com/pulse/can-you-identify-me-blockchain-alan-dickman/">
+Can you identify (me)? With Blockchain, you can!</a>, LinkedIn, January 25<sup>th</sup>, 2018.</li>
+<li>
+<a
+href="https://www.linkedin.com/pulse/viewpoint-cloud-vs-premise-security-alan-dickman/">
+Viewpoint: cloud vs. on premise security</a>, LinkedIn, September, 1<sup>st</sup>, 2017.</li>
+<li><a
+href="https://www.linkedin.com/pulse/text-old-school-speech-future-alan-dickman">
+Text is old-school - Speech is the future!</a>, LinkedIn, January 19<sup>th</sup>, 2017.</li>
+<li><a
+href="https://www.linkedin.com/pulse/blockchain-what-how-develop-ibm-bluemix-alan-dickman">
+Blockchain: What it is and how to develop with it on IBM Bluemix</a>, LinkedIn, September 12<sup>th</sup>, 2016.</li>
+<li><a
+href="https://www.linkedin.com/pulse/profiling-ibm-bluemix-devops-services-alan-dickman">
+Profiling IBM Bluemix DevOps Services</a>, LinkedIn, August 15<sup>th</sup>, 2016.</li>
+<li><a
+href="https://www.linkedin.com/pulse/out-think-complexity-implement-simple-application-testing-dickman">
+Out-think Complexity: Implement a simple application, performance testing and auto-scaling in 1 hour with IBM Bluemix</a>, LinkedIn, August 11<sup>th</sup>, 2016.</li>
+<li><a
+href="https://www.linkedin.com/pulse/cognitive-computing-alan-dickman">
+Cognitive Computing and ......</a>, LinkedIn, June 21<sup>st</sup>, 2016.</li>
+<li><a
+href="https://www.linkedin.com/pulse/out-think-complexity-improving-business-operations-alan-dickman">
+Out-think Complexity: Improving Business Operations with Cognitive Computing</a>, LinkedIn, June 6<sup>th</sup> 2016.</li>
+<li><a
+href="https://www.linkedin.com/pulse/business-operations-out-think-complexity-alan-dickman">
+Business Operations: Out-think Complexity</a>, LinkedIn, May 13<sup>th</sup>, 2016.</li>
+<li><a
+href="http://www.ibm.com/developerworks/bpm/bpmjournal/1312_dickman/1312_dickman.html">
+Integrating IBM Intelligent Operation Center with Business Process Manager</a>, IBM Business Process Management Journal, Issue 5.4, December 4, 2013.</li>
+<li><a
+href="http://www.ibm.com/developerworks/bpm/bpmjournal/1212_dickman/1212_dickman.html">
+Care Process management: Using BPM tools and methodology in the healthcare environment</a>, IBM Business Process Management Journal, Issue 4.4, December 12, 2013.</li>
+<li><a href="http://www.generatinginsights.com/">Generating Insights</a>: Continuing the Journey in the New Era in Energy, ISBN 978-0-98113326-1-1, Kyoto Press, 2012.</li>
+</ul>
+<h5>Other Articles</h5>
+<small>
+    <ul>
+        <li>Numerous Articles in the WebSphere Insider, Sponsored by IBM WebSphere Software, published in 2003 and 2004.</li>
+        <li>Numerous Articles in the MQSeries Insider, Sponsored by BMC Software, published in 1999 and 2000.</li>
+        <li>Microsoft Active Directory, Patricia Seybold Distributed Computing Monitor, October 1998.</li>
+        <li>NT Being Used in Transaction Processing, InformationWeek, June 22, 1998.</li>
+        <li>Microsoft Delivers the Message, (with Ken Walker), InformationWeek, June 30, 1997.</li>
+        <li>Microsoft Gets the Message, Patricia Seybold Distributed Computing Monitor, June, 1997.</li>
+        <li>Microsoft Takes On Transactions, (with Ed Wax), InformationWeek, April 7, 1997.</li>
+        <li>New Order On The Web, Web Apps, March/April 1997.</li>
+        <li>Race Between Corba and ActiveX/DCOM, InformationWeek, January 20, 1997.</li>
+        <li>Joe Takes the Enterprise To the Web, InformationWeek, August 26, 1996.</li>
+        <li>Sun Storms The >Enterprise, InformationWeek, August 12, 1996.</li>
+        <li>Two Tier Vs. Three Tier Apps, InformationWeek, July 4, 1995.</li>
+        <li>How to Sharpen Those Blurry Lines, InformationWeek, July 4, 1995.</li>
+        <li>How To Engineer DCE Deployment, InformationWeek, July 17, 1995.</li>
+        <li>The Software Side of Failure Recovery, Open Systems Today, January 9, 1995.</li>
+        <li>Zero Downtime for the Budget-Conscious, Open Systems Today, December 12, 1994.</li>
+        <li>The RPC vs. Messaging Debate: Under the Covers, Open Systems Today, August 15, 1994.</li>
+        </ul>
+</small>
+<h3>Books</h3>
+<ul>
+  <li> Designing Applications With MSMQ: Message Queuing for Developers, Addison Wesley Longman, Reading, 1998.
+  </li>
+</ul>
+<h3>Videos and Webinars Online</h3>
+<ul>
+    <li>
+      <a href="https://www.youtube.com/watch?v=HEayj_LTg5U">
+      IBM Smarter Process Healthcare Care Process Management Accelerator</a>, YouTube video, July 31, 2014.
+    </li>
+</ul>
+<h5>Other Videos and Webinars </h5>
+<small>
+    <ul>
+        <li>Improving Clinical Outcomes, FierceIT Healthcare Webinar, September 12, 2013.</li>
+        <li>End to End Performance of WebSphere Applications, Best Practices Webinar for the ebizQ.com Series for IBM WebSphere Software, June 10, 2003.</li>
+        <li>Portals: Architectures and Technologies, Straight Talk Series presented by WatchIT.com, 2000.</li>
+        <li>Messaging Middleware: Understanding Broker and MOM, Straight Talk Series presented by WatchIT.com, 1999.</li>
+        <li>Understanding Message-Based communications (Featured Technical Expert), S981202 in the Straight Talk Series presented by WatchIT.com, 1998.</li>
+    </ul>
+</small>
 </body>
 </html>
