Moved lists around
moved lists around

--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
 <style>
 body {
-  font-family: Calibri;
-  font-size: 11pt;
-  color: black;
-  background-color: #F4F7FF
+  font-family: Calibri; font-size: 11pt; color: black; background-color: #F4F7FF
 }
 Large {
-  font-family: Calibri;
-  font-size: 15pt;
-  color: black;
+  font-family: Calibri; font-size: 15pt; color: black;
 }
 small { 
     font-size: smaller;
@@ -92,6 +87,19 @@ href="http://www.ibm.com/developerworks/bpm/bpmjournal/1212_dickman/1212_dickman
 Care Process management: Using BPM tools and methodology in the healthcare environment</a>, IBM Business Process Management Journal, Issue 4.4, December 12, 2013.</li>
 <li><a href="http://www.generatinginsights.com/">Generating Insights</a>: Continuing the Journey in the New Era in Energy, ISBN 978-0-98113326-1-1, Kyoto Press, 2012.</li>
 </ul>
+
+<h3>Books</h3>
+<ul>
+  <li> Designing Applications With MSMQ: Message Queuing for Developers, Addison Wesley Longman, Reading, 1998.
+  </li>
+</ul>
+<h3>Videos and Webinars Online</h3>
+<ul>
+    <li>
+      <a href="https://www.youtube.com/watch?v=HEayj_LTg5U">
+      IBM Smarter Process Healthcare Care Process Management Accelerator</a>, YouTube video, July 31, 2014.
+    </li>
+</ul>
 <h5>Other Articles</h5>
 <small>
     <ul>
@@ -114,18 +122,6 @@ Care Process management: Using BPM tools and methodology in the healthcare envir
         <li>The RPC vs. Messaging Debate: Under the Covers, Open Systems Today, August 15, 1994.</li>
         </ul>
 </small>
-<h3>Books</h3>
-<ul>
-  <li> Designing Applications With MSMQ: Message Queuing for Developers, Addison Wesley Longman, Reading, 1998.
-  </li>
-</ul>
-<h3>Videos and Webinars Online</h3>
-<ul>
-    <li>
-      <a href="https://www.youtube.com/watch?v=HEayj_LTg5U">
-      IBM Smarter Process Healthcare Care Process Management Accelerator</a>, YouTube video, July 31, 2014.
-    </li>
-</ul>
 <h5>Other Videos and Webinars </h5>
 <small>
     <ul>
