--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h3   {color: blue;}
 Alan Dickman is a Solution Architect,
 Executive Consultant and Technical Sales Specialist on theWatson &amp;
 Cloud Platform team of IBM North America. He supports the specification and sale of
-business solutions based on IBM blockchain to state
+business solutions based on IBM Cloud to state
 &amp; local governments, healthcare and life sciences organizations across the
 United States. <p>
 In 2010, Mr. Dickman received a Global Technical Award for his
