minor organizational change

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ h3   {color: blue;}
     <large>
         <b>Alan Dickman</b><br>
         Solution Architect<br>
-        IBM Watson &amp; Cloud Platform Group    
+        IBM Cloud Platform Group    
     </large>
    </td>
  </tr>
